EL-3 JavaDoc added to all classes + API refactored